[gd_scene load_steps=11 format=2]

[ext_resource path="res://entities/player/states/Falling.gd" type="Script" id=2]
[ext_resource path="res://entities/player/Player.gd" type="Script" id=3]
[ext_resource path="res://entities/player/states/Tethered.gd" type="Script" id=4]
[ext_resource path="res://addons/node_fsm_plugin/fsm_node.gd" type="Script" id=5]
[ext_resource path="res://entities/player/Rope.gd" type="Script" id=6]
[ext_resource path="res://entities/player/states/Grounded.gd" type="Script" id=7]
[ext_resource path="res://entities/player/states/WallSliding.gd" type="Script" id=10]
[ext_resource path="res://entities/player/Rig.tscn" type="PackedScene" id=15]

[sub_resource type="CapsuleShape2D" id=1]
radius = 6.8425
height = 10.9734

[sub_resource type="ParticlesMaterial" id=2]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 58.82
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[node name="Player" type="KinematicBody2D"]
position = Vector2( -0.075676, 0 )
script = ExtResource( 3 )

[node name="Rig" parent="." instance=ExtResource( 15 )]
scale = Vector2( 0.27, 0.27 )

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="LeftWallRay" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 10, 0 )

[node name="RightWallRay" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( -10, 0 )

[node name="GroundRay" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 0, 14 )

[node name="Rope" type="Line2D" parent="."]
visible = false
points = PoolVector2Array( 10967.2, -1949.13 )
width = 4.0
default_color = Color( 0.356863, 0.721569, 0.784314, 1 )
joint_mode = 2
end_cap_mode = 2
script = ExtResource( 6 )

[node name="RopeShot" type="Line2D" parent="."]
visible = false
width = 4.0
default_color = Color( 0.27451, 0.545098, 0.588235, 1 )
joint_mode = 2
end_cap_mode = 2

[node name="RopeRay" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 100, -100 )

[node name="RopeShotRay" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 100, -100 )

[node name="RopeDirectionIndicator" type="Particles2D" parent="."]
visible = false
preprocess = 1.0
process_material = SubResource( 2 )

[node name="States" type="Node" parent="."]
script = ExtResource( 5 )
initial_state = "Falling"
target = NodePath("..")

[node name="Tethered" type="Node" parent="States"]
script = ExtResource( 4 )
speed = 8

[node name="Falling" type="Node" parent="States"]
script = ExtResource( 2 )

[node name="Grounded" type="Node" parent="States"]
script = ExtResource( 7 )
drag = Vector2( 0.95, 1 )

[node name="WallSliding" type="Node" parent="States"]
script = ExtResource( 10 )
